--- a/package.json
+++ b/package.json
@@ -41,11 +41,15 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"bits-ui": "^0.21.5",
 		"clsx": "^2.1.1",
 		"firebase": "^10.11.1",
 		"iconify-icon": "^2.1.0",
+		"lucide-svelte": "^0.376.1",
+		"svelte-legos": "^0.2.2",
 		"svelte-sonner": "^0.3.22",
 		"tailwind-merge": "^2.3.0",
-		"tailwind-variants": "^0.2.1"
+		"tailwind-variants": "^0.2.1",
+		"vaul-svelte": "^0.3.0"
 	}
 }
