--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"axios": "^1.6.8",
 		"bits-ui": "^0.21.5",
 		"clsx": "^2.1.1",
 		"firebase": "^10.11.1",
@@ -50,6 +51,7 @@
 		"svelte-sonner": "^0.3.22",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
-		"vaul-svelte": "^0.3.0"
+		"vaul-svelte": "^0.3.0",
+		"zod": "^3.23.5"
 	}
 }
