--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@tailwindcss/typography": "^0.5.13",
 		"axios": "^1.6.8",
 		"bits-ui": "^0.21.5",
 		"clsx": "^2.1.1",
 		"firebase": "^10.11.1",
 		"iconify-icon": "^2.1.0",
 		"lucide-svelte": "^0.376.1",
+		"snarkdown": "^2.0.0",
 		"svelte-legos": "^0.2.2",
 		"svelte-sonner": "^0.3.22",
 		"tailwind-merge": "^2.3.0",
