--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@okrad/svelte-progressbar": "^2.2.0",
 		"@tailwindcss/typography": "^0.5.13",
 		"axios": "^1.6.8",
 		"bits-ui": "^0.21.5",
